ags v3, qs menu spacings fix, made bar not floating

--- a/config/ags-v3/style/bar.scss
+++ b/config/ags-v3/style/bar.scss
@@ -8,7 +8,7 @@ window#bar {
   > box {
     background: $bgColor;
     border-radius: 10px;
-    margin: 8px;
+    // margin: 8px; // makes it floating bar
   }
 
   button {
